# vrr-test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GEMINI.md  README.md  context.md
src/: CMakeLists.txt  glmisc.hpp  glshader.cpp  glshader.h  main.cpp  misc.hpp  strip.cpp  strip.hpp  window.cpp  window.hpp
